Securing sensitive data

--- a/pipelines/.test.gitlab-ci.yml
+++ b/pipelines/.test.gitlab-ci.yml
@@ -22,7 +22,7 @@ qual:init:
     WORKSPACE: qual
 
   before_script:
-    - apt install -y zip
+    - apt-get install -y zip
     - terraform --version
     - unzip -P ${PASSPHRASE} vars.zip
 
