--- a/pipelines/.test.gitlab-ci.yml
+++ b/pipelines/.test.gitlab-ci.yml
@@ -23,6 +23,7 @@ qual:init:
 
   before_script:
     - terraform --version
+    - apt-get install gpg
     - gpg --passphrase ${PASSPHRASE} vars.gpg
 
   script:
