--- a/pipelines/.test.gitlab-ci.yml
+++ b/pipelines/.test.gitlab-ci.yml
@@ -27,7 +27,7 @@ qual:init:
     - terraform --version
 
   script:
-    - gitlab-terraform init -var-file=${VARS_FILE} -var-file=${PORTS_FILE} -var="workspace=${WORKSPACE}"
+    - gitlab-terraform init -var-file=${VARS_FILE} -var="workspace=${WORKSPACE}"
     - gitlab-terraform validate -json
 
 ###########################################################
