Securing sensitive data

--- a/pipelines/.test.gitlab-ci.yml
+++ b/pipelines/.test.gitlab-ci.yml
@@ -3,7 +3,7 @@ image: registry.gitlab.com/gitlab-org/terraform-images/stable:latest
 variables:
   TF_ROOT: ${CI_PROJECT_DIR}
   TF_ADDRESS: ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/${WORKSPACE}
-  VARS_FILE: ./vars/vars.json
+  VARS_FILE: vars/vars.tfvars.json
 
 cache:
   key: ${WORKSPACE}
@@ -26,7 +26,7 @@ qual:init:
     - terraform --version
 
   script:
-    - gitlab-terraform init -var-file="${VARS_FILE}" -var="workspace=${WORKSPACE}"
+    - gitlab-terraform init -var="workspace=${WORKSPACE}"
     - gitlab-terraform validate -json
 
 ###########################################################
@@ -45,12 +45,14 @@ qual:plan:
 
   before_script:
     - mkdir ~/.ssh
+    - mkdir vars
     - cp $raspberry_config ~/.ssh/config
     - cp $raspberry_key ~/.ssh/raspberry_key
     - chmod 0600 ~/.ssh/raspberry_key
+    - cp $SERVICES_PORTS vars/vars.tfvars.json
 
   script:
-    - gitlab-terraform plan -input=false -var-file="${SERVICES_PORTS}" -var="raspberry_host=$raspberry_host" -var="workspace=${WORKSPACE}"
+    - gitlab-terraform plan -input=false -var="raspberry_host=$raspberry_host" -var="workspace=${WORKSPACE}" -var-file="{VARS_FILE}"
     - gitlab-terraform plan-json
 
   artifacts:
