--- a/pipelines/.test.gitlab-ci.yml
+++ b/pipelines/.test.gitlab-ci.yml
@@ -49,7 +49,9 @@ qual:plan:
     - cp $raspberry_config ~/.ssh/config
     - cp $raspberry_key ~/.ssh/raspberry_key
     - chmod 0600 ~/.ssh/raspberry_key
-    - cp $SERVICES_PORTS ${VARS_FILE}
+    - cp $SERVICES_PORTS ./${VARS_FILE}
+    - ls
+    - ls vars/
 
   script:
     - gitlab-terraform plan -input=false -var="raspberry_host=$raspberry_host" -var="workspace=${WORKSPACE}" -var-file="${VARS_FILE}"
