Updated main pipeline

--- a/pipelines/.main.gitlab-ci.yml
+++ b/pipelines/.main.gitlab-ci.yml
@@ -3,6 +3,7 @@ image: registry.gitlab.com/gitlab-org/terraform-images/stable:latest
 variables:
   TF_ROOT: ${CI_PROJECT_DIR}
   TF_ADDRESS: ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/${WORKSPACE}
+  VARS_FILE: vars/vars.tfvars.json
 
 cache:
   key: ${WORKSPACE}
@@ -13,12 +14,12 @@ cache:
 prod:init:
   stage: init
 
-  variables:
-    WORKSPACE: prod
-
   only:
     refs:
       - main
+
+  variables:
+    WORKSPACE: prod
 
   before_script:
     - terraform --version
@@ -42,14 +43,15 @@ prod:plan:
       - main
 
   before_script:
-    - cd modules
     - mkdir ~/.ssh
+    - mkdir vars
     - cp $raspberry_config ~/.ssh/config
     - cp $raspberry_key ~/.ssh/raspberry_key
     - chmod 0600 ~/.ssh/raspberry_key
+    - cp $SERVICES_PORTS ${VARS_FILE}
 
   script:
-    - gitlab-terraform plan -input=false -var="raspberry_host=$raspberry_host" -var="workspace=${WORKSPACE}"
+    - gitlab-terraform plan -input=false -var="raspberry_host=$raspberry_host" -var="workspace=${WORKSPACE}" -var-file="${VARS_FILE}"
     - gitlab-terraform plan-json
 
   artifacts:
@@ -77,7 +79,6 @@ prod:apply:
       - main
 
   before_script:
-    - cd modules
     - mkdir ~/.ssh
     - cp $raspberry_config ~/.ssh/config
     - cp $raspberry_key ~/.ssh/raspberry_key
