--- a/pipelines/.test.gitlab-ci.yml
+++ b/pipelines/.test.gitlab-ci.yml
@@ -10,7 +10,6 @@ cache:
   paths:
     - ${TF_ROOT}/.terraform
 
-
 ###########################################################
 qual:init:
   stage: init
@@ -26,7 +25,7 @@ qual:init:
     - terraform --version
 
   script:
-    - gitlab-terraform init -var="workspace=${WORKSPACE}"
+    - gitlab-terraform init -var-file=${VARS_FILE} -var="workspace=${WORKSPACE}"
     - gitlab-terraform validate -json
 
 ###########################################################
